--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,23 @@ typings/
 # next.js build output
 .next
 
+# 构建输出
+lib/
+
+
+# 依赖
+node_modules/
+
+# 日志
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode/
 .idea/
+
+# 系统文件
+.DS_Store
+Thumbs.db
 package-lock.json
