--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-toolkit",
+  "name": "@gaozh1024/rn-toolkit",
   "version": "1.0.0",
   "description": "A comprehensive React Native toolkit",
   "main": "lib/index.js",
@@ -8,9 +8,11 @@
     "build": "rimraf lib && tsc -p tsconfig.build.json",
     "dev": "tsc -p tsconfig.build.json --watch",
     "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix"
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "postinstall": "node scripts/postinstall.js"
   },
   "keywords": [
+    "@gaozh1024",
     "react-native",
     "toolkit",
     "navigation",
@@ -21,26 +23,32 @@
     "localization",
     "i18n"
   ],
-  "author": "Your Name",
+  "author": "gaozh1024",
   "license": "MIT",
   "files": [
     "lib",
+    "scripts",
     "README.md",
     "LICENSE"
   ],
   "peerDependencies": {
+    "@react-native-clipboard/clipboard": ">=1.16.0",
+    "@react-navigation/bottom-tabs": ">=6.0.0",
+    "@react-navigation/native": ">=6.0.0",
+    "@react-navigation/stack": ">=6.0.0",
     "react": ">=16.8.0",
     "react-native": ">=0.60.0",
+    "react-native-device-info": ">=12.0.0",
+    "react-native-localize": ">=3.5.2",
     "react-native-mmkv": ">=2.0.0",
-    "react-native-navigation": ">=7.0.0",
-    "react-native-reanimated": ">=3.0.0",
-    "@react-native-clipboard/clipboard": "^1.16.0",
-    "react-native-device-info": "^12.0.0",
-    "react-native-localize": "^3.5.2"
+    "react-native-safe-area-context": ">=4.0.0",
+    "react-native-screens": ">=3.0.0",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.0",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
