--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./lib",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -13,8 +13,8 @@
   ],
   "exclude": [
     "node_modules",
-    "dist",
-    "test_demo",
+    "lib",
+    "test_app",
     "**/*.test.ts",
     "**/*.test.tsx",
     "**/*.spec.ts",
