--- a/package.json
+++ b/package.json
@@ -41,9 +41,15 @@
     "react-native-device-info": ">=12.0.0",
     "react-native-localize": ">=3.5.2",
     "react-native-mmkv": ">=2.0.0",
+    "react-native-reanimated": ">=3.0.0",
     "react-native-safe-area-context": ">=4.0.0",
     "react-native-screens": ">=3.0.0",
     "react-native-vector-icons": "^10.3.0"
+  },
+  "peerDependenciesMeta": {
+    "react-native-reanimated": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@types/react": "^19.1.0",
