--- a/package.json
+++ b/package.json
@@ -52,17 +52,21 @@
     }
   },
   "devDependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "@types/react": "^19.1.0",
     "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "^3.37.0",
     "rimraf": "^5.0.10",
     "ts-loader": "^9.5.4",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {}
+  }
 }
