--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
+    "react-native-mmkv": "^3.3.3",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
     "rimraf": "^5.0.10",
