--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "react-native-reanimated": ">=3.0.0",
     "react-native-safe-area-context": ">=4.0.0",
     "react-native-screens": ">=3.0.0",
-    "react-native-svg": "^15.14.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-svg": ">=15.0.0",
+    "react-native-worklets": ">=0.6.0",
+    "react-native-vector-icons": ">=10.0.0",
+    "react-native-drawer-layout": ">=4.0.0"
   },
   "peerDependenciesMeta": {
     "react-native-reanimated": {
@@ -62,15 +64,17 @@
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
+    "react-native-drawer-layout": "^4.1.13",
     "react-native-mmkv": "^3.3.3",
+    "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
     "react-native-svg": "^15.14.0",
+    "react-native-worklets": "^0.6.1",
     "rimraf": "^5.0.10",
     "ts-loader": "^9.5.4",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {}
+  }
 }
