--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postinstall": "node scripts/postinstall.js"
   },
   "keywords": [
-    "@gaozh1024",
+    "gaozh1024",
     "react-native",
     "toolkit",
     "navigation",
@@ -20,8 +20,7 @@
     "animation",
     "clipboard",
     "device-info",
-    "localization",
-    "i18n"
+    "localization"
   ],
   "author": "gaozh1024",
   "license": "MIT",
