--- a/package.json
+++ b/package.json
@@ -35,21 +35,21 @@
   },
   "peerDependencies": {
     "@react-native-clipboard/clipboard": ">=1.16.0",
+    "@react-native-vector-icons/ionicons": ">=12.0.0",
     "@react-navigation/bottom-tabs": ">=6.0.0",
     "@react-navigation/native": ">=6.0.0",
     "@react-navigation/stack": ">=6.0.0",
     "react": ">=16.8.0",
     "react-native": ">=0.60.0",
     "react-native-device-info": ">=12.0.0",
+    "react-native-drawer-layout": ">=4.0.0",
     "react-native-localize": ">=3.5.2",
     "react-native-mmkv": ">=2.0.0",
     "react-native-reanimated": ">=3.0.0",
     "react-native-safe-area-context": ">=4.0.0",
     "react-native-screens": ">=3.0.0",
     "react-native-svg": ">=15.0.0",
-    "react-native-worklets": ">=0.6.0",
-    "react-native-vector-icons": ">=10.0.0",
-    "react-native-drawer-layout": ">=4.0.0"
+    "react-native-worklets": ">=0.6.0"
   },
   "peerDependenciesMeta": {
     "react-native-reanimated": {
@@ -57,12 +57,12 @@
     }
   },
   "devDependencies": {
+    "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@types/react": "^19.1.0",
     "@types/react-native": "^0.73.0",
-    "@types/react-native-vector-icons": "^6.4.18",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
