--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": ">=0.60.0",
     "react-native-device-info": ">=12.0.0",
     "react-native-drawer-layout": ">=4.0.0",
+    "react-native-gesture-handler": ">=2.0.0",
     "react-native-localize": ">=3.5.2",
     "react-native-mmkv": ">=2.0.0",
     "react-native-reanimated": ">=3.0.0",
@@ -67,6 +68,7 @@
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "react-native-drawer-layout": "^4.1.13",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-mmkv": "^3.3.3",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^4.14.1",
