--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "react-native-device-info": ">=12.0.0",
     "react-native-drawer-layout": ">=4.0.0",
     "react-native-gesture-handler": ">=2.0.0",
-    "react-native-localize": ">=3.5.2",
+    "react-native-localize": ">=3.5.0",
     "react-native-mmkv": ">=2.0.0",
+    "react-native-permissions": ">=5.4.0",
     "react-native-reanimated": ">=3.0.0",
     "react-native-safe-area-context": ">=4.0.0",
     "react-native-screens": ">=3.0.0",
@@ -67,9 +68,12 @@
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
+    "react-native-device-info": "^14.1.1",
     "react-native-drawer-layout": "^4.1.13",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-localize": "^3.5.4",
     "react-native-mmkv": "^3.3.3",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
