--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-safe-area-context": ">=4.0.0",
     "react-native-screens": ">=3.0.0",
     "react-native-svg": ">=15.0.0",
-    "react-native-worklets": ">=0.6.0"
+    "react-native-worklets": ">=0.6.0",
+    "react-native-keyboard-controller": ">=1.19.5"
   },
   "peerDependenciesMeta": {
     "react-native-reanimated": {
@@ -71,6 +72,7 @@
     "react-native-device-info": "^14.1.1",
     "react-native-drawer-layout": "^4.1.13",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-keyboard-controller": "^1.19.5",
     "react-native-localize": "^3.5.4",
     "react-native-mmkv": "^3.3.3",
     "react-native-permissions": "^5.4.2",
