--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gaozh1024/rn-toolkit",
-  "version": "1.4.19",
+  "version": "1.4.18",
   "description": "A comprehensive React Native toolkit",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,6 +24,10 @@
   ],
   "author": "gaozh1024",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "files": [
     "lib",
     "scripts",
